[package]
name = "rustrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8"
specs = { version = "0.17", features = ["serde"] }
specs-derive = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
